--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             flex-direction: column;
             flex-wrap: wrap;
             align-items: flex-start;
-            max-width: 500px;
+            max-width: 700px;
         }
 
         .main-name {
@@ -75,9 +75,88 @@
             gap: 5px;
         }
 
-        .projects > h3 {
+        .projects > h3,
+        .certifications > h3 {
             margin-top: 0;
             margin-bottom: 10px;
+        }
+
+        .certifications {
+            width: 100%;
+        }
+
+        .cert-provider {
+            margin-bottom: 30px;
+        }
+
+        .cert-provider > h4 {
+            margin-top: 0;
+            margin-bottom: 15px;
+            font-size: 18px;
+            padding-bottom: 10px;
+            position: relative;
+        }
+
+        .cert-provider > h4::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100px;
+            height: 1px;
+            background: linear-gradient(to right, #fff, transparent);
+            opacity: 0.5;
+        }
+
+        .cert-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .cert-list > li {
+            padding: 10px 0;
+            border: none;
+            background: none;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .cert-name {
+            flex: 1;
+        }
+
+        .cert-info {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            gap: 5px;
+        }
+
+        .cert-code {
+            font-size: 14px;
+            font-weight: bold;
+            opacity: 0.6;
+        }
+
+        .cert-badge {
+            font-size: 12px;
+            padding: 4px 10px;
+            border: 1px solid #fff;
+            border-radius: 4px;
+            transition: all .15s ease;
+            white-space: nowrap;
+        }
+
+        .cert-badge:hover {
+            background: #fff;
+            color: #000;
+            cursor: pointer;
         }
 
         .link {
@@ -236,25 +315,117 @@
             </a>
         </div>
     </div>
+
+    <div class="certifications">
+        <h3 data-i18n="certifications">Certifications</h3>
+        <div id="cert-container"></div>
+    </div>
 </main>
 <script>
     const translations = {
         en: {
             subtitle: "solutions architect, Java developer, AWS Certified",
             projects: "Projects",
-            email: "email"
+            email: "email",
+            certifications: "Certifications",
+            seeBadge: "see badge"
         },
         pt: {
             subtitle: "arquiteto de soluções, desenvolvedor Java, certificado AWS",
             projects: "Projetos",
-            email: "email"
+            email: "email",
+            certifications: "Certificações",
+            seeBadge: "ver badge"
         }
     };
 
+    const certifications = [
+        {
+            provider: "AWS",
+            certs: [
+                {
+                    name: "AWS Certified Solutions Architect – Associate",
+                    code: "SAA-C03",
+                    badgeUrl: "https://www.credly.com/badges/219f5e8b-1b1b-4101-afe7-7b4fdd1e8cf3"
+                },
+                {
+                    name: "AWS Certified Developer – Associate",
+                    code: "DVA-C02",
+                    badgeUrl: "https://www.credly.com/badges/dca435d9-7878-403c-a7eb-1c7d3b8ee0ad"
+                },
+                {
+                    name: "AWS Certified Cloud Practitioner",
+                    code: "CLF-C02",
+                    badgeUrl: "https://www.credly.com/badges/219f5e8b-1b1b-4101-afe7-7b4fdd1e8cf3"
+                }
+            ]
+        },
+        {
+            provider: "Oracle Cloud",
+            certs: [
+                {
+                    name: "Oracle Certified Professional, Java SE 11 Developer",
+                    code: "1Z0-1085-25",
+                    badgeUrl: "https://catalog-education.oracle.com/ords/certview/sharebadge?id=F156DC7FD740B920D73EAF41C5238B83B0EB59D3C2E619941DBA8275A764A090"
+                }
+            ]
+        }
+    ];
+
     const elements = document.querySelectorAll("[data-i18n]");
     const buttons = document.querySelectorAll(".lang-switch button");
+    let currentLang = "en";
+
+    function renderCertifications() {
+        const container = document.getElementById("cert-container");
+        container.innerHTML = "";
+
+        certifications.forEach(provider => {
+            const providerDiv = document.createElement("div");
+            providerDiv.className = "cert-provider";
+
+            const providerTitle = document.createElement("h4");
+            providerTitle.textContent = provider.provider;
+            providerDiv.appendChild(providerTitle);
+
+            const certList = document.createElement("ul");
+            certList.className = "cert-list";
+
+            provider.certs.forEach(cert => {
+                const li = document.createElement("li");
+
+                const certName = document.createElement("span");
+                certName.className = "cert-name";
+                certName.textContent = cert.name;
+                li.appendChild(certName);
+
+                const certInfo = document.createElement("div");
+                certInfo.className = "cert-info";
+
+                const certCode = document.createElement("span");
+                certCode.className = "cert-code";
+                certCode.textContent = cert.code;
+                certInfo.appendChild(certCode);
+
+                const certBadge = document.createElement("a");
+                certBadge.className = "cert-badge";
+                certBadge.href = cert.badgeUrl;
+                certBadge.target = "_blank";
+                certBadge.textContent = translations[currentLang].seeBadge;
+                certInfo.appendChild(certBadge);
+
+                li.appendChild(certInfo);
+                certList.appendChild(li);
+            });
+
+            providerDiv.appendChild(certList);
+            container.appendChild(providerDiv);
+        });
+    }
 
     function setLanguage(lang) {
+        currentLang = lang;
+
         elements.forEach(el => {
             const key = el.dataset.i18n;
             el.textContent = translations[lang][key];
@@ -266,6 +437,8 @@
 
         document.documentElement.lang = lang;
         localStorage.setItem("lang", lang);
+
+        renderCertifications();
     }
 
     const savedLang = localStorage.getItem("lang") || "en";
