fixed cert name

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             provider: "Oracle Cloud",
             certs: [
                 {
-                    name: "Oracle Certified Professional, Java SE 11 Developer",
+                    name: "OCI Foundations Associate",
                     code: "1Z0-1085-25",
                     badgeUrl: "https://catalog-education.oracle.com/ords/certview/sharebadge?id=F156DC7FD740B920D73EAF41C5238B83B0EB59D3C2E619941DBA8275A764A090"
                 }
